# lo-runtime

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  runtime-abi.md
.github/workflows/: ci.yml
cpp/: .clang-tidy  CMakeLists.txt  README.md
cpp/include/lo_runtime/: abort.h  alloc.h  cast.h  descriptors.h  gc.h  init.h  io.h  lo_runtime.h  object.h  shadow_stack.h  string_ops.h
cpp/src/: abort.cpp  alloc.cpp  cast.cpp  descriptors.cpp  gc.cpp  init.cpp  io.cpp  shadow_stack.cpp  string_ops.cpp
cpp/tests/: abi_tests.cpp  io_roundtrip.sh  lo_io_probe.cpp  test_main.cpp
runbooks/: ws1-build-skeletons.md  ws2-cheney-collector.md
runbooks/notes/: cc-phase0-notes.md  cc-phase1-notes.md  cc-phase2-notes.md  cc-phase3-notes.md  cc-phase4-notes.md  cc-ws2-phaseA-notes.md  cc-ws2-phaseB-notes.md  for-sc-ws1-spec-deltas.md  for-sc-ws2-spec-deltas.md
rust/: Cargo.toml  README.md
rust/src/: abort.rs  alloc.rs  cast.rs  descriptors.rs  gc.rs  init.rs  io.rs  lib.rs  object.rs  shadow_stack.rs  string_ops.rs
rust/tests/: abi_smoke.rs  io_roundtrip.rs
scripts/: install-hooks.sh
tests/: README.md
tests/c_harness/: main.c  run.sh
tests/lo_programs/: alloc_basic.lo  class_basic.lo  string_basic.lo
zig/: README.md  build.zig
zig/src/: abort.zig  alloc.zig  cast.zig  descriptors.zig  gc.zig  init.zig  io.zig  lo_io_probe.zig  lo_runtime.zig  object.zig  shadow_stack.zig  string_ops.zig
